updated menu etc

--- a/home.html
+++ b/home.html
@@ -726,16 +726,22 @@ function updateInventoryUI(inventory) {
   document.getElementById("lowStockCount").textContent = lowStock.length;
 
   const ingredients = {
-    burger_buns: "Burger Buns",
-    sugar: "Sugar Packs",
-    flour: "Flour",
-    lettuce: "Lettuce",
-    cheese_slices: "Cheddar Cheese Slices",
-    ground_beef: "Ground Beef / Patties",
-    coffee_beans: "Coffee",
-    potato: "Potato Sack",
-    chicken: "Chicken",
-    bacon: "Bacon"
+  flour: "Flour Sack",
+  burger_buns: "Package of Buns",
+  sugar: "Sugar Sack",
+  lettuce: "Lettuce Head",
+  potato: "Potato Sack",
+  cheese_slices: "Packaged Cheese",
+  ground_beef: "Packaged Ground Beef",
+  chicken: "Chicken Package",
+  bacon: "Bacon Package",
+  coffee_beans: "Bag of Coffee",
+  vanilla: "Vanilla Bean",
+  ice_cream: "Ice Cream Tub",
+  onion: "Onion Bundle",
+  tomato: "Tomato Bundle",
+  tortilla: "Tortilla Package",
+  goat_cheese: "Goat Cheese"
   };
 
   const alertsList = document.getElementById("inventoryAlertsList");
